--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,7 @@ in.log
 test.c
 log.log
 testcase/
-my.ans
 test
-test.ans
 2532/
 .vscode/
 build/
@@ -22,3 +20,4 @@ test.in
 clockInfo.txt
 .Xil/
 serial/
+*.ans
